...
    }
    
    // Failable Initializer for tab bar controller
    required init?(coder aDecoder: NSCoder) {
        super.init(coder: aDecoder)
        // Initialize Tab Bar Item
//        tabBarItem = UITabBarItem(title: "Home", image: UIImage(named: "Home"), tag: 1)
    }
    
    func setUpDaysOfTheWeekLabel() -> String{
        var todaysSubString = todaysDate as NSString
        todaysSubString = todaysSubString.substring(with: NSRange(location: 0, length: 3)) as NSString
        let checkmark = "✅"
...
        }
        return nil
    }
    
    func image(forEmptyDataSet scrollView: UIScrollView) -> UIImage? {
        if scrollView == appointmentViewTable{
            let image = UIImage(named: "Appointments")
            return image
        }
        else if scrollView == taskViewTable{
            let image = UIImage(named: "Tasks")
            return image
        }
        else if scrollView == journalViewTable{
            let image = UIImage(named: "Journals")
            return image
        }
...
    
    // Appointments and Tasks can be completed, canceled and delted from the 
    // Home view controller
    func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
        // Need an alert dialog box so the user can specify that they have completed the task.
        // When you select a task and mark it as complete on the home screen change the picture to a green checkbox
        let exitMenu = UIAlertAction(title: "Exit Menu", style: .cancel, handler: nil)
        
        if tableView == taskViewTable{
            // Get the task item and task cell
            var task = taskArray[(indexPath as NSIndexPath).row] as TaskItem
            let taskCell = taskViewTable.cellForRow(at: indexPath) as! HomeTaskCell
            
            // Create an Alert to ask the user if they have completed the task.
            let alert = (UIAlertController(title: "Hello", message: "Have you completed the task: \n\(task.taskTitle)?", preferredStyle: UIAlertControllerStyle.alert))
            
            // Add the option to complete a task or exit the menu
            let completeTaskAction = (UIAlertAction(title: "Complete Task", style: UIAlertActionStyle.default, handler: {(action: UIAlertAction) in
                
                let completeTask = UIAlertController(title: "Confirmation", message: "Are you sure you want to Complete the task: \n\(task.taskTitle)?", preferredStyle: UIAlertControllerStyle.alert)
                
                // Add complete action to the complete task controller
                let complete = UIAlertAction(title: "Complete", style: .destructive, handler: {(action: UIAlertAction) in
                    task.completed = true
                    task.canceled = false
                    task.deleted = false
                    taskCell.homeTaskCompleted(task)
                    self.db.updateTask(task)
                })
...
                completeTask.addAction(complete)
                completeTask.addAction(exitMenu)
                self.present(completeTask, animated: true, completion: nil)

            }))
            // Add the option to cancel a task and a confirmation menu
            let cancelTaskAction = (UIAlertAction(title: "Cancel Task", style: UIAlertActionStyle.default, handler: {(action: UIAlertAction) in
                let confirmationMenu = self.confirmationMenu("Tasks", typeOfAction: "Cancel", indexPath: indexPath)
                // Why is the user canceling the task
                confirmationMenu.addTextField(configurationHandler: {(textField) in
                    textField.placeholder = "Reason for cancel"
                    textField.addTarget(self, action: #selector(self.textChanged(_:)), for: .editingChanged)
                })
                self.present(confirmationMenu, animated: true, completion: nil)

            }))
            // Add the option to delete a task and a confirmation menu
            let deleteTaskAction = (UIAlertAction(title: "Delete Task", style: UIAlertActionStyle.destructive, handler: { (action: UIAlertAction) in
                
                let confirmationMenu = self.confirmationMenu("Tasks", typeOfAction: "Delete", indexPath: indexPath)
                // Why is the user deleting the task
                confirmationMenu.addTextField(configurationHandler: {(textField) in
                    textField.placeholder = "Reason for delete"
                    textField.addTarget(self, action: #selector(self.textChanged(_:)), for: .editingChanged)
                })

                self.present(confirmationMenu, animated: true, completion: nil)
            } ))
            
...
            let appointmentCell = appointmentViewTable.cellForRow(at: indexPath) as! HomeAppointmentCell
            
            // Create an Alert to ask the user if they have completed the task.
            let alert = UIAlertController(title: "Hello", message: "Have you finished the appointment: \n\(appointment.title)?", preferredStyle: UIAlertControllerStyle.alert)
            
            // Add the option to complete an appointment and a confirmation menu
            let completeAppointmentAction = (UIAlertAction(title: "Complete Appointment", style: UIAlertActionStyle.default, handler: { (action: UIAlertAction) in

                let completeAppointment = UIAlertController(title: "Confirmation", message: "Are you sure you want to Complete the appointment: \n\(appointment.title)?", preferredStyle: UIAlertControllerStyle.alert)
                let complete = (UIAlertAction(title: "Complete", style: .destructive, handler: {(action: UIAlertAction) in
                    
                    appointment.completed = true
                    appointment.canceled = false
...
                completeAppointment.addAction(complete)
                completeAppointment.addAction(exitMenu)
                self.present(completeAppointment, animated: true, completion: nil)
            } ))
            
            // Add the option to cancel an appointment and a confirmation menu
            let cancelAppointmentAction = (UIAlertAction(title: "Cancel Appointment", style: UIAlertActionStyle.default, handler: { (action: UIAlertAction) in
                
                // Present the confirmation menu
                let confirmationAlert = self.confirmationMenu("Appointments", typeOfAction: "Cancel", indexPath: indexPath)
                
                // Why is the user canceling the appointment
                confirmationAlert.addTextField(configurationHandler: {(textField) in
...
                    textField.addTarget(self, action: #selector(self.textChanged(_:)), for: .editingChanged)
                })
                self.present(confirmationAlert, animated: true, completion: nil)
                
            } ))
            // Add the option to delete an appointment and a confirmation menu
            let deleteAppointmentAction = (UIAlertAction(title: "Delete Appointment", style: UIAlertActionStyle.destructive, handler: { (action: UIAlertAction) in
                
                // Present the confirmation menu
                let confirmationAlert = self.confirmationMenu("Appointments", typeOfAction: "Delete", indexPath: indexPath)
                
                // Why is the user deleting the appointment
                confirmationAlert.addTextField(configurationHandler: {(textField) in
...
