...
    
    fileprivate var startDatePickerHidden = false
    fileprivate var endDatePickerHidden = false
    fileprivate var appointmentTypeHidden = false
    fileprivate var otherIsHidden = false
    
    fileprivate let typeOfAppointments = ["Family" , "Medical" , "Recreational" , "Exercise" , "Medication Times" , "Social Event" , "Leisure" , "Household", "Work", "Physical Therapy",
        "Occupational Therapy", "Speech Therapy", "Class","Self Care", "Other"]
    fileprivate let cellID: String = "AppointmentCells"
    fileprivate let dateFormat:DateFormatter = DateFormatter().dateWithTime
    fileprivate let db = DatabaseFunctions.sharedInstance
    fileprivate var startingDate:Date? = nil
    fileprivate var endingDate:  Date? = nil
...
        // Set the maximum and minimum dates for the date pickers
        appointmentStartDate.minimumDate = currentDate
        appointmentEndDate.minimumDate = currentDate
        appointmentStartDate.maximumDate = Date().calendarEndDate
        appointmentEndDate.maximumDate = Date().calendarEndDate
        
        appointmentNameTextField.placeholder = "Name of Appointment"
        appointmentLocationTextBox.placeholder = "Location of Appointment"
        repeatAppointmentTitle.text = "Schedule a repeating Appointment"
        alertAppointmentTitle.text = "Schedule an Alert"
        typeOfAppointmentRightDetail.text = typeOfAppointments[0]
        alertAppointmentRightDetail.text = AlertTableViewController()
                                                        .alertArray[0]
        repeatAppointmentRightDetail.text = RepeatTableViewController()
            .repeatArray[0]
        
        // Set the selected alert and the selected repeat
        selectedAlert = AlertTableViewController().alertArray[0]
        selectedRepeat = RepeatTableViewController().repeatArray[0]
        
        // Set some initial default text for the TextView so the user knows where to type.
        additionalInfoTextBox.text = "Additional Information..."
        additionalInfoTextBox.font = UIFont(name: "Helvetica", size: 18.0)
        additionalInfoTextBox.textColor = UIColor.lightGray
        otherTextField.placeholder = "Please enter the type of appointment"
        otherTextField.delegate = self
    }
    
...
