...
            alertTaskRightDetail.text = selectedAlert
        }
    }

    override func viewDidLoad() {
        super.viewDidLoad()
        taskNameTextField.placeholder = "Task Name"
        taskAdditionalInfoTextBox.placeholder = "Additional Information"
        taskFinishDateLabel.text = "Estimated Task Completion Date"
        taskFinishDateRightDetail.text = taskFormatter
                            .string(from: currentDate)
        repeatingTaskTitle.text = "Schedule a repeating Task"
        alertTaskTitle.text     = "Schedule an alert"
        alertTaskRightDetail.text = AlertTableViewController()
                                                .alertArray[0]
...
